parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ID

Grammar

Rule 0     S' -> json
Rule 1     json -> LLAVE_IZQ elementos LLAVE_DER
Rule 2     elementos -> par COMA elementos
Rule 3     elementos -> par
Rule 4     par -> NAME DOSPUNTOS CADENA
Rule 5     par -> EMAIL DOSPUNTOS CADENA
Rule 6     par -> MOVIE_ID DOSPUNTOS objeto
Rule 7     par -> TEXT DOSPUNTOS CADENA
Rule 8     par -> DATE DOSPUNTOS objeto
Rule 9     par -> CADENA DOSPUNTOS objeto
Rule 10    par -> CADENA DOSPUNTOS CADENA
Rule 11    objeto -> LLAVE_IZQ par LLAVE_DER
Rule 12    objeto -> LLAVE_IZQ OID DOSPUNTOS CADENA LLAVE_DER
Rule 13    objeto -> LLAVE_IZQ DATE DOSPUNTOS LLAVE_IZQ NUMBERLONG DOSPUNTOS CADENA LLAVE_DER LLAVE_DER

Terminals, with rules where they appear

CADENA               : 4 5 7 9 10 10 12 13
COMA                 : 2
DATE                 : 8 13
DOSPUNTOS            : 4 5 6 7 8 9 10 12 13 13
EMAIL                : 5
ID                   : 
LLAVE_DER            : 1 11 12 13 13
LLAVE_IZQ            : 1 11 12 13 13
MOVIE_ID             : 6
NAME                 : 4
NUMBERLONG           : 13
OID                  : 12
TEXT                 : 7
error                : 

Nonterminals, with rules where they appear

elementos            : 1 2
json                 : 0
objeto               : 6 8 9
par                  : 2 3 11

Parsing method: LALR

state 0

    (0) S' -> . json
    (1) json -> . LLAVE_IZQ elementos LLAVE_DER

    LLAVE_IZQ       shift and go to state 2

    json                           shift and go to state 1

state 1

    (0) S' -> json .



state 2

    (1) json -> LLAVE_IZQ . elementos LLAVE_DER
    (2) elementos -> . par COMA elementos
    (3) elementos -> . par
    (4) par -> . NAME DOSPUNTOS CADENA
    (5) par -> . EMAIL DOSPUNTOS CADENA
    (6) par -> . MOVIE_ID DOSPUNTOS objeto
    (7) par -> . TEXT DOSPUNTOS CADENA
    (8) par -> . DATE DOSPUNTOS objeto
    (9) par -> . CADENA DOSPUNTOS objeto
    (10) par -> . CADENA DOSPUNTOS CADENA

    NAME            shift and go to state 5
    EMAIL           shift and go to state 7
    MOVIE_ID        shift and go to state 8
    TEXT            shift and go to state 9
    DATE            shift and go to state 10
    CADENA          shift and go to state 6

    elementos                      shift and go to state 3
    par                            shift and go to state 4

state 3

    (1) json -> LLAVE_IZQ elementos . LLAVE_DER

    LLAVE_DER       shift and go to state 11


state 4

    (2) elementos -> par . COMA elementos
    (3) elementos -> par .

    COMA            shift and go to state 12
    LLAVE_DER       reduce using rule 3 (elementos -> par .)


state 5

    (4) par -> NAME . DOSPUNTOS CADENA

    DOSPUNTOS       shift and go to state 13


state 6

    (9) par -> CADENA . DOSPUNTOS objeto
    (10) par -> CADENA . DOSPUNTOS CADENA

    DOSPUNTOS       shift and go to state 14


state 7

    (5) par -> EMAIL . DOSPUNTOS CADENA

    DOSPUNTOS       shift and go to state 15


state 8

    (6) par -> MOVIE_ID . DOSPUNTOS objeto

    DOSPUNTOS       shift and go to state 16


state 9

    (7) par -> TEXT . DOSPUNTOS CADENA

    DOSPUNTOS       shift and go to state 17


state 10

    (8) par -> DATE . DOSPUNTOS objeto

    DOSPUNTOS       shift and go to state 18


state 11

    (1) json -> LLAVE_IZQ elementos LLAVE_DER .

    $end            reduce using rule 1 (json -> LLAVE_IZQ elementos LLAVE_DER .)


state 12

    (2) elementos -> par COMA . elementos
    (2) elementos -> . par COMA elementos
    (3) elementos -> . par
    (4) par -> . NAME DOSPUNTOS CADENA
    (5) par -> . EMAIL DOSPUNTOS CADENA
    (6) par -> . MOVIE_ID DOSPUNTOS objeto
    (7) par -> . TEXT DOSPUNTOS CADENA
    (8) par -> . DATE DOSPUNTOS objeto
    (9) par -> . CADENA DOSPUNTOS objeto
    (10) par -> . CADENA DOSPUNTOS CADENA

    NAME            shift and go to state 5
    EMAIL           shift and go to state 7
    MOVIE_ID        shift and go to state 8
    TEXT            shift and go to state 9
    DATE            shift and go to state 10
    CADENA          shift and go to state 6

    par                            shift and go to state 4
    elementos                      shift and go to state 19

state 13

    (4) par -> NAME DOSPUNTOS . CADENA

    CADENA          shift and go to state 20


state 14

    (9) par -> CADENA DOSPUNTOS . objeto
    (10) par -> CADENA DOSPUNTOS . CADENA
    (11) objeto -> . LLAVE_IZQ par LLAVE_DER
    (12) objeto -> . LLAVE_IZQ OID DOSPUNTOS CADENA LLAVE_DER
    (13) objeto -> . LLAVE_IZQ DATE DOSPUNTOS LLAVE_IZQ NUMBERLONG DOSPUNTOS CADENA LLAVE_DER LLAVE_DER

    CADENA          shift and go to state 21
    LLAVE_IZQ       shift and go to state 23

    objeto                         shift and go to state 22

state 15

    (5) par -> EMAIL DOSPUNTOS . CADENA

    CADENA          shift and go to state 24


state 16

    (6) par -> MOVIE_ID DOSPUNTOS . objeto
    (11) objeto -> . LLAVE_IZQ par LLAVE_DER
    (12) objeto -> . LLAVE_IZQ OID DOSPUNTOS CADENA LLAVE_DER
    (13) objeto -> . LLAVE_IZQ DATE DOSPUNTOS LLAVE_IZQ NUMBERLONG DOSPUNTOS CADENA LLAVE_DER LLAVE_DER

    LLAVE_IZQ       shift and go to state 23

    objeto                         shift and go to state 25

state 17

    (7) par -> TEXT DOSPUNTOS . CADENA

    CADENA          shift and go to state 26


state 18

    (8) par -> DATE DOSPUNTOS . objeto
    (11) objeto -> . LLAVE_IZQ par LLAVE_DER
    (12) objeto -> . LLAVE_IZQ OID DOSPUNTOS CADENA LLAVE_DER
    (13) objeto -> . LLAVE_IZQ DATE DOSPUNTOS LLAVE_IZQ NUMBERLONG DOSPUNTOS CADENA LLAVE_DER LLAVE_DER

    LLAVE_IZQ       shift and go to state 23

    objeto                         shift and go to state 27

state 19

    (2) elementos -> par COMA elementos .

    LLAVE_DER       reduce using rule 2 (elementos -> par COMA elementos .)


state 20

    (4) par -> NAME DOSPUNTOS CADENA .

    COMA            reduce using rule 4 (par -> NAME DOSPUNTOS CADENA .)
    LLAVE_DER       reduce using rule 4 (par -> NAME DOSPUNTOS CADENA .)


state 21

    (10) par -> CADENA DOSPUNTOS CADENA .

    COMA            reduce using rule 10 (par -> CADENA DOSPUNTOS CADENA .)
    LLAVE_DER       reduce using rule 10 (par -> CADENA DOSPUNTOS CADENA .)


state 22

    (9) par -> CADENA DOSPUNTOS objeto .

    COMA            reduce using rule 9 (par -> CADENA DOSPUNTOS objeto .)
    LLAVE_DER       reduce using rule 9 (par -> CADENA DOSPUNTOS objeto .)


state 23

    (11) objeto -> LLAVE_IZQ . par LLAVE_DER
    (12) objeto -> LLAVE_IZQ . OID DOSPUNTOS CADENA LLAVE_DER
    (13) objeto -> LLAVE_IZQ . DATE DOSPUNTOS LLAVE_IZQ NUMBERLONG DOSPUNTOS CADENA LLAVE_DER LLAVE_DER
    (4) par -> . NAME DOSPUNTOS CADENA
    (5) par -> . EMAIL DOSPUNTOS CADENA
    (6) par -> . MOVIE_ID DOSPUNTOS objeto
    (7) par -> . TEXT DOSPUNTOS CADENA
    (8) par -> . DATE DOSPUNTOS objeto
    (9) par -> . CADENA DOSPUNTOS objeto
    (10) par -> . CADENA DOSPUNTOS CADENA

    OID             shift and go to state 29
    DATE            shift and go to state 30
    NAME            shift and go to state 5
    EMAIL           shift and go to state 7
    MOVIE_ID        shift and go to state 8
    TEXT            shift and go to state 9
    CADENA          shift and go to state 6

    par                            shift and go to state 28

state 24

    (5) par -> EMAIL DOSPUNTOS CADENA .

    COMA            reduce using rule 5 (par -> EMAIL DOSPUNTOS CADENA .)
    LLAVE_DER       reduce using rule 5 (par -> EMAIL DOSPUNTOS CADENA .)


state 25

    (6) par -> MOVIE_ID DOSPUNTOS objeto .

    COMA            reduce using rule 6 (par -> MOVIE_ID DOSPUNTOS objeto .)
    LLAVE_DER       reduce using rule 6 (par -> MOVIE_ID DOSPUNTOS objeto .)


state 26

    (7) par -> TEXT DOSPUNTOS CADENA .

    COMA            reduce using rule 7 (par -> TEXT DOSPUNTOS CADENA .)
    LLAVE_DER       reduce using rule 7 (par -> TEXT DOSPUNTOS CADENA .)


state 27

    (8) par -> DATE DOSPUNTOS objeto .

    COMA            reduce using rule 8 (par -> DATE DOSPUNTOS objeto .)
    LLAVE_DER       reduce using rule 8 (par -> DATE DOSPUNTOS objeto .)


state 28

    (11) objeto -> LLAVE_IZQ par . LLAVE_DER

    LLAVE_DER       shift and go to state 31


state 29

    (12) objeto -> LLAVE_IZQ OID . DOSPUNTOS CADENA LLAVE_DER

    DOSPUNTOS       shift and go to state 32


state 30

    (13) objeto -> LLAVE_IZQ DATE . DOSPUNTOS LLAVE_IZQ NUMBERLONG DOSPUNTOS CADENA LLAVE_DER LLAVE_DER
    (8) par -> DATE . DOSPUNTOS objeto

    DOSPUNTOS       shift and go to state 33


state 31

    (11) objeto -> LLAVE_IZQ par LLAVE_DER .

    COMA            reduce using rule 11 (objeto -> LLAVE_IZQ par LLAVE_DER .)
    LLAVE_DER       reduce using rule 11 (objeto -> LLAVE_IZQ par LLAVE_DER .)


state 32

    (12) objeto -> LLAVE_IZQ OID DOSPUNTOS . CADENA LLAVE_DER

    CADENA          shift and go to state 34


state 33

    (13) objeto -> LLAVE_IZQ DATE DOSPUNTOS . LLAVE_IZQ NUMBERLONG DOSPUNTOS CADENA LLAVE_DER LLAVE_DER
    (8) par -> DATE DOSPUNTOS . objeto
    (11) objeto -> . LLAVE_IZQ par LLAVE_DER
    (12) objeto -> . LLAVE_IZQ OID DOSPUNTOS CADENA LLAVE_DER
    (13) objeto -> . LLAVE_IZQ DATE DOSPUNTOS LLAVE_IZQ NUMBERLONG DOSPUNTOS CADENA LLAVE_DER LLAVE_DER

    LLAVE_IZQ       shift and go to state 35

    objeto                         shift and go to state 27

state 34

    (12) objeto -> LLAVE_IZQ OID DOSPUNTOS CADENA . LLAVE_DER

    LLAVE_DER       shift and go to state 36


state 35

    (13) objeto -> LLAVE_IZQ DATE DOSPUNTOS LLAVE_IZQ . NUMBERLONG DOSPUNTOS CADENA LLAVE_DER LLAVE_DER
    (11) objeto -> LLAVE_IZQ . par LLAVE_DER
    (12) objeto -> LLAVE_IZQ . OID DOSPUNTOS CADENA LLAVE_DER
    (13) objeto -> LLAVE_IZQ . DATE DOSPUNTOS LLAVE_IZQ NUMBERLONG DOSPUNTOS CADENA LLAVE_DER LLAVE_DER
    (4) par -> . NAME DOSPUNTOS CADENA
    (5) par -> . EMAIL DOSPUNTOS CADENA
    (6) par -> . MOVIE_ID DOSPUNTOS objeto
    (7) par -> . TEXT DOSPUNTOS CADENA
    (8) par -> . DATE DOSPUNTOS objeto
    (9) par -> . CADENA DOSPUNTOS objeto
    (10) par -> . CADENA DOSPUNTOS CADENA

    NUMBERLONG      shift and go to state 37
    OID             shift and go to state 29
    DATE            shift and go to state 30
    NAME            shift and go to state 5
    EMAIL           shift and go to state 7
    MOVIE_ID        shift and go to state 8
    TEXT            shift and go to state 9
    CADENA          shift and go to state 6

    par                            shift and go to state 28

state 36

    (12) objeto -> LLAVE_IZQ OID DOSPUNTOS CADENA LLAVE_DER .

    COMA            reduce using rule 12 (objeto -> LLAVE_IZQ OID DOSPUNTOS CADENA LLAVE_DER .)
    LLAVE_DER       reduce using rule 12 (objeto -> LLAVE_IZQ OID DOSPUNTOS CADENA LLAVE_DER .)


state 37

    (13) objeto -> LLAVE_IZQ DATE DOSPUNTOS LLAVE_IZQ NUMBERLONG . DOSPUNTOS CADENA LLAVE_DER LLAVE_DER

    DOSPUNTOS       shift and go to state 38


state 38

    (13) objeto -> LLAVE_IZQ DATE DOSPUNTOS LLAVE_IZQ NUMBERLONG DOSPUNTOS . CADENA LLAVE_DER LLAVE_DER

    CADENA          shift and go to state 39


state 39

    (13) objeto -> LLAVE_IZQ DATE DOSPUNTOS LLAVE_IZQ NUMBERLONG DOSPUNTOS CADENA . LLAVE_DER LLAVE_DER

    LLAVE_DER       shift and go to state 40


state 40

    (13) objeto -> LLAVE_IZQ DATE DOSPUNTOS LLAVE_IZQ NUMBERLONG DOSPUNTOS CADENA LLAVE_DER . LLAVE_DER

    LLAVE_DER       shift and go to state 41


state 41

    (13) objeto -> LLAVE_IZQ DATE DOSPUNTOS LLAVE_IZQ NUMBERLONG DOSPUNTOS CADENA LLAVE_DER LLAVE_DER .

    COMA            reduce using rule 13 (objeto -> LLAVE_IZQ DATE DOSPUNTOS LLAVE_IZQ NUMBERLONG DOSPUNTOS CADENA LLAVE_DER LLAVE_DER .)
    LLAVE_DER       reduce using rule 13 (objeto -> LLAVE_IZQ DATE DOSPUNTOS LLAVE_IZQ NUMBERLONG DOSPUNTOS CADENA LLAVE_DER LLAVE_DER .)

